parser.c
/*
 * Syntakticka analyza
 * Jan Fruhauf xfruha00
 */

#include "parser.h"

// OK
int prog(Token *token) {
    GET_TOKEN;
    if (token->type == END_OF_LINE) {
        return prog(token);
    } else if (token->type == KEYWORD && token->attribute.keyword == PACKAGE) {
        GET_TOKEN_AND_CHECK_TYPE(IDENTIFIER_VAR);
        if (!strcmp(token->attribute.string, "main")) {
            gen_start();
            return func(token);
        }
        return SYNTAX_ERROR;
    }
    return SYNTAX_ERROR;
}

// OK
int func(Token *token) {
    GET_TOKEN;
    if (token->type == END_OF_LINE) {
        return func(token);
    } else if (token->type == KEYWORD && token->attribute.keyword == FUNC) {
        GET_TOKEN_AND_CHECK_TYPE(IDENTIFIER_FUNC);
        char *name = token->attribute.string;
        if (!strcmp(name, "main")) {
            gen_main();
        } else {
            gen_func_start(token->attribute.string);
        }
        GET_TOKEN_AND_CHECK_TYPE(LEFT_PAREN);
        WHILE_END_OF_LINE;
        GET_TOKEN_AND_JUMP_INTO_AND_CHECK_RES(params_in);
        CHECK_TOKEN_TYPE(RIGHT_PAREN);
        GET_TOKEN;
        if (token->type != LEFT_BRACKET) {
            if (token->type == LEFT_PAREN) {
                GET_TOKEN_AND_JUMP_INTO_AND_CHECK_RES(params_out);
                CHECK_TOKEN_TYPE(RIGHT_PAREN);
                GET_TOKEN;
            } else {
                GET_TOKEN_AND_JUMP_INTO_AND_CHECK_RES(params_out);
            }
        }
        CHECK_TOKEN_TYPE(LEFT_BRACKET);
        GET_TOKEN_AND_JUMP_INTO_AND_CHECK_RES(statement);
        CHECK_TOKEN_TYPE(RIGHT_BRACKET);
        if (!strcmp(name, "main")) {
            gen_main_end();
        } else {
            gen_func_end(token->attribute.string);
        }
        return func(token);
    } else if (token->type == END_OF_FILE_TOKEN) {
        return end(token);
    }
    return SYNTAX_ERROR;
}

// OK
int params_in(Token *token) {
    if (token->type == IDENTIFIER_VAR) {
        GET_TOKEN_AND_JUMP_INTO_AND_CHECK_RES(var);
        GET_TOKEN_AND_JUMP_INTO_AND_CHECK_RES(params_in_n);
        return SYNTAX_OK;
    }
    return SYNTAX_OK;
}

// OK
int params_in_n(Token *token) {
    if (token->type == COMMA) {
        WHILE_END_OF_LINE;
        GET_TOKEN_AND_CHECK_TYPE(IDENTIFIER_VAR);
        GET_TOKEN_AND_JUMP_INTO_AND_CHECK_RES(var);
        GET_TOKEN_AND_JUMP_INTO_AND_CHECK_RES(params_in_n);
        return SYNTAX_OK;
    }
    return SYNTAX_OK;
}

// OK
int var(Token *token) {
    if (token->type == KEYWORD) {
        if (token->attribute.keyword == INT ||
            token->attribute.keyword == FLOAT64 ||
            token->attribute.keyword == STRING) {
            return SYNTAX_OK;
        }
    }
    return SYNTAX_ERROR;
}

// OK
int params_out(Token *token) {
    if (token->type == KEYWORD) {
        JUMP_INTO_AND_CHECK_RES(var);
        GET_TOKEN_AND_JUMP_INTO_AND_CHECK_RES(params_out_n);
        return SYNTAX_OK;
    }
    return SYNTAX_OK;
}

// OK
int params_out_n(Token *token) {
    if (token->type == COMMA) {
        GET_TOKEN_AND_JUMP_INTO_AND_CHECK_RES(var);
        GET_TOKEN_AND_JUMP_INTO_AND_CHECK_RES(params_out_n);
        return SYNTAX_OK;
    }
    return SYNTAX_OK;
}

int statement(Token *token) {
    if (token->type == END_OF_LINE) {
        GET_TOKEN;
        return statement(token);
    } else if (token->type == IDENTIFIER_VAR) {
        gen_var_declaration(token->attribute.string);
        GET_TOKEN_AND_JUMP_INTO_AND_CHECK_RES(diff_var);
        CHECK_TOKEN_TYPE(END_OF_LINE);
        GET_TOKEN;
        return statement(token);
    } else if (token->type == KEYWORD && token->attribute.keyword == RETURN) {
        GET_TOKEN_AND_JUMP_INTO_AND_CHECK_RES(ret);
        CHECK_TOKEN_TYPE(END_OF_LINE);
        GET_TOKEN;
        return statement(token);
    } else if (token->type == IDENTIFIER_FUNC) {
        char *name = token->attribute.string;
        gen_func_call(name);
        GET_TOKEN_AND_CHECK_TYPE(LEFT_PAREN);
        GET_TOKEN_AND_JUMP_INTO_AND_CHECK_RES(arg);
        CHECK_TOKEN_TYPE(RIGHT_PAREN);
        GET_TOKEN_AND_CHECK_TYPE(END_OF_LINE);
        gen_func_ret(name);
        return statement(token);
    } else if (token->type == KEYWORD && token->attribute.keyword == IF) {
        GET_TOKEN;
        if (token->type == LEFT_PAREN) {
            GET_TOKEN_AND_JUMP_INTO_AND_CHECK_RES(expression);
            CHECK_TOKEN_TYPE(RIGHT_PAREN);
            GET_TOKEN;
        } else {
            GET_TOKEN_AND_JUMP_INTO_AND_CHECK_RES(expression);
        }
        CHECK_TOKEN_TYPE(LEFT_BRACKET);
        GET_TOKEN_AND_CHECK_TYPE(END_OF_LINE);
        GET_TOKEN_AND_JUMP_INTO_AND_CHECK_RES(statement);
        CHECK_TOKEN_TYPE(END_OF_LINE);
        GET_TOKEN_AND_CHECK_TYPE(RIGHT_BRACKET);
        GET_TOKEN;
        if (token->type == KEYWORD && token->attribute.keyword == ELSE) {
             GET_TOKEN_AND_CHECK_TYPE(LEFT_BRACKET);
             GET_TOKEN_AND_CHECK_TYPE(END_OF_LINE);
             GET_TOKEN_AND_JUMP_INTO_AND_CHECK_RES(statement);
             GET_TOKEN_AND_CHECK_TYPE(END_OF_LINE);
             GET_TOKEN_AND_CHECK_TYPE(RIGHT_BRACKET);
             GET_TOKEN_AND_CHECK_TYPE(END_OF_LINE);
             GET_TOKEN;
            return statement(token);
        } else {
            return SYNTAX_ERROR;
        }
    } else if (token->type == KEYWORD && token->attribute.keyword == FOR) {
        GET_TOKEN_AND_JUMP_INTO_AND_CHECK_RES(def_var);
        CHECK_TOKEN_TYPE(SEMICOLON);
        GET_TOKEN_AND_JUMP_INTO_AND_CHECK_RES(expression);
        CHECK_TOKEN_TYPE(SEMICOLON);
        GET_TOKEN_AND_JUMP_INTO_AND_CHECK_RES(for_3);
        CHECK_TOKEN_TYPE(LEFT_BRACKET);
        GET_TOKEN_AND_CHECK_TYPE(END_OF_LINE);
        GET_TOKEN_AND_JUMP_INTO_AND_CHECK_RES(statement);
        CHECK_TOKEN_TYPE(END_OF_LINE);
        GET_TOKEN_AND_CHECK_TYPE(RIGHT_BRACKET);
        GET_TOKEN_AND_CHECK_TYPE(END_OF_LINE);
        GET_TOKEN;
        return statement(token);
    }
    return SYNTAX_OK;
}

// OK
int id_statement_n(Token *token) {
    if (token->type == COMMA) {
        GET_TOKEN_AND_CHECK_TYPE(IDENTIFIER_VAR);
        GET_TOKEN;
        return id_statement_n(token);
    } else {
        return SYNTAX_OK;
    }
}

// OK
int arg(Token *token) {
    if (token->type == DATA_TYPE_INT ||
        token->type == DATA_TYPE_FLOAT64 ||
        token->type == DATA_TYPE_STRING ||
        token->type == IDENTIFIER_VAR) {
        GET_TOKEN;
        return arg_n(token);
    }
    return SYNTAX_OK;
}

// OK
int arg_n(Token *token) {
    if (token->type == COMMA) {
        GET_TOKEN_AND_JUMP_INTO_AND_CHECK_RES(val);
        gen_func_arg_pass(*token, token->arg_pass_pos++);
        GET_TOKEN;
        return arg_n(token);
    }
    token->arg_pass_pos = 0;
    return SYNTAX_OK;
}

// OK
int val(Token *token) {
    if (token->type == DATA_TYPE_INT ||
        token->type == DATA_TYPE_FLOAT64 ||
        token->type == DATA_TYPE_STRING ||
        token->type == IDENTIFIER_VAR) {
        return SYNTAX_OK;
    }
    return SYNTAX_ERROR;
}

// OK
int def_var(Token *token) {
    if (token->type == IDENTIFIER_VAR) {
        GET_TOKEN_AND_CHECK_TYPE(DECLARE);
        GET_TOKEN_AND_JUMP_INTO_AND_CHECK_RES(expression);
    }
    return SYNTAX_OK;
}

// OK
int for_3(Token *token) {
    if (token->type == IDENTIFIER_VAR) {
        GET_TOKEN_AND_CHECK_TYPE(ASSIGN);
        GET_TOKEN_AND_JUMP_INTO_AND_CHECK_RES(expression);
    }
    return SYNTAX_OK;
}

// OK
int type(Token *token) {
    if (token->type == DATA_TYPE_STRING ||
        token->type == DATA_TYPE_FLOAT64 ||
        token->type == DATA_TYPE_INT ||
        token->type == IDENTIFIER_VAR) {
        JUMP_INTO_AND_CHECK_RES(expression);
        return SYNTAX_OK;
    } else if (token->type == IDENTIFIER_FUNC) {
        GET_TOKEN_AND_CHECK_TYPE(LEFT_PAREN);
        GET_TOKEN_AND_JUMP_INTO_AND_CHECK_RES(arg);
        CHECK_TOKEN_TYPE(RIGHT_PAREN);
        GET_TOKEN;
        return SYNTAX_OK;
    } else if (token->type == LEFT_PAREN) {
        GET_TOKEN_AND_JUMP_INTO_AND_CHECK_RES(expression);
        CHECK_TOKEN_TYPE(RIGHT_PAREN);
        return SYNTAX_OK;
    }
    return SYNTAX_ERROR;
}

// OK
int diff_var(Token *token) {
    if (token->type == DECLARE) {
        GET_TOKEN_AND_JUMP_INTO_AND_CHECK_RES(type);
        if (token->attribute.keyword == INT) {
            int someInt = token->attribute.integer;
            char str[12];
            sprintf(str, "%d", someInt);
            gen_var_default(str, T_INT);
        } else if (token->attribute.keyword == FLOAT64) {
            char str[21];
            sprintf(str, "%f", token->attribute.float64);
            gen_var_default(str, T_FLOAT);
        } else if (token->attribute.keyword == STRING) {
            gen_var_default(token->attribute.string, T_STRING);
        }
        return SYNTAX_OK;
    } else {
        JUMP_INTO_AND_CHECK_RES(id_statement_n);
        CHECK_TOKEN_TYPE(ASSIGN);
        WHILE_END_OF_LINE;
        GET_TOKEN_AND_JUMP_INTO_AND_CHECK_RES(type);
        return SYNTAX_OK;
    }
}

// OK
int ret(Token *token) {
    if (token->type == DATA_TYPE_INT ||
        token->type == DATA_TYPE_FLOAT64 ||
        token->type == DATA_TYPE_STRING ||
        token->type == IDENTIFIER_VAR) {
        JUMP_INTO_AND_CHECK_RES(expression);
        JUMP_INTO_AND_CHECK_RES(ret_n);
        return SYNTAX_OK;
    }
    return SYNTAX_OK;
}

// OK
int ret_n(Token *token) {
    if (token->type == COMMA) {
        GET_TOKEN;
        return ret(token);
    }
    return SYNTAX_OK;
}

int end(Token *token) {
    CHECK_TOKEN_TYPE(END_OF_FILE_TOKEN);
    generation();
    return SYNTAX_OK;
}
